--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
@@ -1,8 +1,18 @@
 <div class="set-12 list-head">
-  <div class="set-10">
-    <input type="text" placeholder="Búscar tópicos..." (input)="applyFilter($event)">
+  <div class="set-8">
+    <!-- <input type="text" placeholder="Búscar tópicos..." (input)="applyFilter($event)"> -->
+    <mat-form-field appearance="outline">
+      <mat-label>Búscar tópicos...</mat-label>
+      <input matInput type="text" (keyup)="applyFilter($event)">
+      <button matSuffix mat-icon-button>
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
   </div>
-  <div class="set-2 txt-right">
+  <div class="set-4 txt-right">
+    <button type="button" mat-mini-fab color="primary" (click)="filterTopicCoverage()">
+      <mat-icon>filter_list</mat-icon>
+    </button>
     <button type="button" mat-mini-fab color="warn" (click)="popAddDocumentTopic()" [disabled]="!isCollaborator">
       <mat-icon>add_circle</mat-icon>
     </button>
