--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
@@ -50,15 +50,33 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    background: #171b3b;
-    border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.3);
+    // background: #171b3b;
+    background: #f1f1f1;
+    border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+    // border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3);
 
-    input {
-      width: 100%;
-      height: 40px;
-      padding: 10px;
-      background: #ffffff;
-      border-radius: 5px;
+    // input {
+    //   width: 100%;
+    //   height: 40px;
+    //   padding: 10px;
+    //   background: #ffffff;
+    //   border-radius: 5px;
+    // }
+
+    button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 5px;
+    }
+
+    button:first-child {
+      margin-left: 0;
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding: 0;
+      margin: 0;
     }
   }
 }
