add share and vote actions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,8 @@
 
     <div class="set-12 innernav">
       <div class="set-12 innerbtn">
-        <button type="button" (click)="linkMe('home')">
-          <span>Quienes somos</span>
+        <button type="button" (click)="linkMe('quienesSomos')">
+          <span >Quienes somos</span>
         </button>
         <button type="button" (click)="linkMe('home')">
           <span>Mision/Video</span>
@@ -90,13 +90,13 @@
       <button class="mt-4" type="button" (click)="linkMe('profile')">
         <span>Mi perfil</span>
       </button>
-      <button class="mt-4" type="button">
+      <button class="mt-4" type="button" disabled>
         <span>Asociaciones</span>
       </button>
-      <button class="mt-4" type="button">
+      <button class="mt-4" type="button" disabled>
         <span>Documentos</span>
       </button>
-      <button class="mt-4" type="button">
+      <button class="mt-4" type="button" disabled>
         <span>Dashboard</span>
       </button>
       <button class="mt-4" type="button" (click)="linkMe('configuracion')">
