--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -121,10 +121,10 @@
 
         </div>
         <div class="set-12 ctrls mt-2">
-            <button class="set-6" type="button" mat-raised-button color="warn">
+            <button class="set-6" type="button" mat-raised-button color="warn" disabled>
                 <small>Cancelar</small>
             </button>
-            <button class="set-6"  type="submit" mat-raised-button color="primary" (click)="onUpdateUserData">Registrate</button>
+            <button class="set-6"  type="submit" mat-raised-button color="primary" (click)="onUpdateUserData">Actualizar</button>
         </div>
     </form>
 </div>
