--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="set-12 icons">
-            <button type="button" mat-icon-button color="primary" (click)="addFavorites()">
+            <button type="button" mat-icon-button color="primary" disabled (click)="addFavorites()">
                 <mat-icon *ngIf="!isFavorite">favorite</mat-icon>
               </button>
             <button type="button" mat-icon-button color="primary" disabled>
