--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -66,7 +66,7 @@
 
   <div class="set-12 mb-page">
     <div class="mb-inner">
-      <h3>¿Quienes somos?</h3>
+      <h3 id="quienesSomos" >¿Quienes somos?</h3>
       <p>Una colectiva plural, abierta y propositiva.</p>
       <p>Una colectiva que privilegia el proyecto antes que las personas.</p>
       <p>Una colectiva que SÍ busca incidir en la agenda pública y política en el marco de la coyuntura electoral del
