--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
@@ -18,10 +18,11 @@
             </button>
         </div>
         <div class="set-12 icons">
-            <button type="button" mat-icon-button color="primary" (click)="openBottomSheet()">
-                <mat-icon>favorite</mat-icon>
-            </button>
-            <button type="button" mat-icon-button color="primary" disabled>
+            <button type="button" mat-icon-button (click)="addFavorites()" disabled>
+                <mat-icon color="primary" *ngIf="!isFavorite">favorite</mat-icon>
+                <mat-icon color="accent" *ngIf="isFavorite">favorite</mat-icon>
+              </button>
+            <button type="button" mat-icon-button color="primary" disabled >
                 <mat-icon>check_circle</mat-icon>
             </button>
             <button type="button" mat-icon-button color="primary" (click)="openBottomSheet()">
