--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,15 +43,15 @@
   <!---User is  login-->
   <div class="set-12" *ngIf="user != null">
     <div class="set-12 avatarhldr">
-      <button type="button" class="avatar">
+      <button type="button" class="avatar set-3">
         <img src="{{ user.avatarImage }}" alt="{{ user.firstname }}" *ngIf="user.avatarImage != null" />
         <span *ngIf="user.avatarImage == null">
           {{ user.firstname | firstword | firstletter
           }}{{ user.lastname | firstword | firstletter }}
         </span>
       </button>
-      <div class="usrname">{{ user.firstname }} {{ user.lastname }}</div>
-      <mat-icon class="arrow-rigth" (click)="open = !open; displayProfileMenu()">keyboard_arrow_right</mat-icon>
+      <div class="usrname set-8">{{ user.firstname }} {{ user.lastname }}</div>
+      <mat-icon class="set-1 arrow-rigth" (click)="open = !open; displayProfileMenu()">keyboard_arrow_right</mat-icon>
     </div>
 
     <div class="set-12 innernav">
@@ -103,7 +103,7 @@
         <span>Configuracion</span>
       </button>
       <button class="mt-4" type="button" (click)="onSignOut()">
-        <mat-icon>power_settings_new</mat-icon> <span>Salir</span>
+        <!-- <mat-icon>power_settings_new</mat-icon> --> <span>Salir</span> 
       </button>
     </div>
   </div>
