--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -2,39 +2,10 @@
     <mat-spinner></mat-spinner>
 </div>
 
-
-<!-- <div class="set-12" *ngIf="isDataAvailable">
-    <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
-        <mat-form-field appearance="outline">
-            <mat-label>Nombre(s)</mat-label>
-            <input type="text" matInput formControlName="firstname">
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label>Apellido(s)</mat-label>
-            <input type="text" matInput formControlName="lastname">
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label>Correo electrónico</mat-label>
-            <input type="text" matInput formControlName="email">
-        </mat-form-field>
-
-        <div class="set-12 ctrls">
-            <button type="button" mat-raised-button color="warn">
-                <small>Cancelar</small>
-            </button>
-            <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid">
-                <small>Guardar</small>
-            </button>
-        </div>
-    </form>
-</div> -->
-
 <div class="form-profile " *ngIf="isDataAvailable && isMobile">
     <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
-        <h2>Tu perfil</h2>
-        <div class="set-12 avatarhldr mt-2">
+        <h3>Tu perfil</h3>
+        <div class="set-12 avatarhldr">
             <button type="button" class="avatar">
                 <img src="{{ user.avatarImage }}" alt="{{ user.firstname }}" *ngIf="user.avatarImage != null" />
                 <span *ngIf="user.avatarImage == null">
@@ -67,7 +38,7 @@
                 <mat-label>Código Postal</mat-label>
                 <input type="text" matInput formControlName="postalcode">
             </mat-form-field>
-<!-- 
+            <!-- 
             <mat-form-field appearance="outline">
                 <mat-label>Ocupacion</mat-label>
                 <input matInput formControlName="ocupation">
@@ -91,15 +62,16 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            
+
             <mat-form-field appearance="outline">
                 <mat-label>Nombre de Asociación</mat-label>
                 <input matInput formControlName="associationName">
             </mat-form-field>
-           
+
             <mat-form-field appearance="outline">
                 <mat-label>Describe tu asociación</mat-label>
-                <textarea matInput formControlName="associationDescription"></textarea>
+                <textarea cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
+                    cdkAutosizeMaxRows="5" matInput formControlName="associationDescription"></textarea>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Intereses</mat-label>
@@ -120,11 +92,12 @@
             </mat-form-field>
 
         </div>
-        <div class="set-12 ctrls mt-2">
+        <div class="set-12 ctrls ">
             <button class="set-6" type="button" mat-raised-button color="warn" disabled>
                 <small>Cancelar</small>
             </button>
-            <button class="set-6"  type="submit" mat-raised-button color="primary" (click)="onUpdateUserData">Actualizar</button>
+            <button class="set-6" type="submit" mat-raised-button color="primary"
+                (click)="onUpdateUserData">Actualizar</button>
         </div>
     </form>
 </div>
