--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -1,15 +1,13 @@
 <div class="set-12 topic-card">
     <mat-card *ngFor="let topic of topics">
-        <div>
-            <h3 class="set-9 ">{{topic.title}}</h3>
-            <span class="set-3" (click)="openDialog(topic._id)">Ver más</span>
-            <p class="set-12 ">{{topic.updateAt}}</p>
+        <div class="dialog-body">
+            <span class="set-12 "><strong>{{topic.title}}</strong></span>
         </div>
-
+        
         <div class="set-12 icons">
             <button type="button" mat-icon-button color="primary" disabled (click)="addFavorites()">
                 <mat-icon *ngIf="!isFavorite">favorite</mat-icon>
-              </button>
+            </button>
             <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>check_circle</mat-icon>
             </button>
@@ -22,6 +20,13 @@
             <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>forum</mat-icon>
             </button>
+            
         </div>
+        <div class="set-12 ctrls">
+            <button class="set-12" type="button" mat-raised-button color="primary"  (click)="openDialog(topic._id)">
+                <small>Ver más</small>
+            </button>
+        </div>
+     
     </mat-card>
 </div>
