--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -1,22 +1,30 @@
-:host{
-
+:host {
   width: 100%;
-  height: 100%;
+  height: auto;
   float: left;
   padding: 0 20px;
 
-  
+  .topic-card {
+    mat-card {
+      margin-bottom: 10px;
+    }
 
-.topic-card{
+    p {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
 
-  p{
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }  
-  .icons{
-    display: flex;
-    justify-content: space-between;
-   
-  }  
-}
+    .icons {
+      display: flex;
+      justify-content: space-between;
+     
+
+      button {
+        mat-icon {
+          font-size: 13pt;
+        }
+      }
+    }
+    
+  }
 }
