--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
@@ -1,29 +1,63 @@
 :host {
-    .topic-single-mobile {
-        padding: 20px;
-        h3 {
-            margin-bottom: 10px;
-        }
 
-        .info {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
+  padding: 20px;
+  float: left;
+  width: 100%;
+
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+
+  .dialog-head {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    * {
+      margin: 0;
     }
 
-    .icons {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 10px;
-        margin-bottom: 5px;
-
-
+    .set-4 {
+      display: flex;
+      justify-content: flex-end;
     }
+
+    button {
+      display: flex;
+      align-items: center;
+
+      mat-icon {
+        font-size: 14pt;
+      }
+    }
+
+    button:last-child {
+      margin: 0;
+    }
+  }
+
+  .dialog-body {
+    margin-top: 30px;
+    p{
+      margin-top: 10px;
+    }
+  }
+
+  .icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 5px;
+
+  }
 
 
 }
