update close votes button after to vote

--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="set-12 icons">
-            <!-- <button type="button" mat-icon-button (click)="addFavorites()" disabled>
+            <button type="button" mat-icon-button (click)="addFavorites()" disabled>
                 <mat-icon color="primary" *ngIf="!isFavorite">favorite</mat-icon>
                 <mat-icon color="accent" *ngIf="isFavorite">favorite</mat-icon>
-              </button> -->
+              </button>
             <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>check_circle</mat-icon>
             </button>
