update styles circle-bar
fix vote and favorite functions

--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -70,8 +70,8 @@
 
             <mat-form-field appearance="outline">
                 <mat-label>Describe tu asociación</mat-label>
-                <textarea cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
-                    cdkAutosizeMaxRows="5" matInput formControlName="associationDescription"></textarea>
+                <textarea cdkTextareaAutosize
+                 matInput formControlName="associationDescription"></textarea>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Intereses</mat-label>
