--- a/src/app/hub/components/search-input-mobile/search-input-mobile.component.html
+++ b/src/app/hub/components/search-input-mobile/search-input-mobile.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="formGroup" >
 <mat-form-field appearance="outline">
   <mat-label>Buscar contenidos</mat-label>
-  <input type="text" matInput formControlName="contents">
+  <input type="text" matInput  disabled>
   <button type="button" matSuffix>
     <mat-icon>search</mat-icon>
   </button>
