--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -5,28 +5,27 @@
         </div>
         
         <div class="set-12 icons">
-            <button type="button" mat-icon-button color="primary" disabled (click)="addFavorites()">
-                <mat-icon *ngIf="!isFavorite">favorite</mat-icon>
-            </button>
-            <button type="button" mat-icon-button color="primary" disabled>
+            <button type="button" mat-icon-button color="primary" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+            (click)="addFavorites()" *ngIf="!isFavorite" disabled>
+            <mat-icon>favorite</mat-icon>
+          </button>
+
+          <button type="button" mat-icon-button color="accent" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+            (click)="removeFavorites()" *ngIf="isFavorite" disabled>
+            <mat-icon>favorite</mat-icon>
+          </button>
+            <!-- <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>check_circle</mat-icon>
-            </button>
+            </button> -->
             <button type="button" mat-icon-button color="primary" (click)="openBottomSheet()">
                 <mat-icon>share</mat-icon>
             </button>
-            <button type="button" mat-icon-button color="primary" disabled>
+            <!-- <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>report</mat-icon>
+            </button> -->
+            <button type="button" mat-icon-button color="primary"  (click)="openDialog(topic._id)">
+                <mat-icon>visibility</mat-icon>
             </button>
-            <button type="button" mat-icon-button color="primary" disabled>
-                <mat-icon>forum</mat-icon>
-            </button>
-            
-        </div>
-        <div class="set-12 ctrls">
-            <button class="set-12" type="button" mat-raised-button color="primary"  (click)="openDialog(topic._id)">
-                <small>Ver más</small>
-            </button>
-        </div>
-     
+        </div> 
     </mat-card>
 </div>
