--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
@@ -11,34 +11,40 @@
     </div>
 
     <div class="set-12 dialog-body">
-        <span><strong>{{data.title}}</strong></span>
-        <p  [innerHTML]="data.description"></p>
+        <span><strong>{{data.topicTitle}}</strong></span>
+        <p  [innerHTML]="data.topicDescription"></p>
         <div class="info">
-            <span class=" mt-2">Relevancia ciudadana</span>
-            <span class=" mt-2">8</span>
+            <!-- <span class=" mt-2">Relevancia ciudadana</span>
+            <span class=" mt-2">8</span> -->
             <div class="mt-2">
                 <button type="button" *ngIf="!userVoted" mat-raised-button color="accent" (click)="openModalVote()">
                     <strong>Votar</strong>
                 </button>
             </div>
+            <div class="set-12 vote-count" *ngIf="userVoted">Votos: {{ votes }}</div>
         </div>
         <div class="set-12 icons">
-            <button type="button" mat-icon-button (click)="addFavorites()" disabled>
-                <mat-icon color="primary" *ngIf="!isFavorite">favorite</mat-icon>
-                <mat-icon color="accent" *ngIf="isFavorite">favorite</mat-icon>
-              </button>
-            <button type="button" mat-icon-button color="primary" disabled>
+            <button type="button" mat-icon-button color="primary" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+            (click)="addFavorites()" *ngIf="!isFavorite">
+            <mat-icon>favorite</mat-icon>
+          </button>
+
+          <button type="button" mat-icon-button color="accent" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+            (click)="removeFavorites()" *ngIf="isFavorite">
+            <mat-icon>favorite</mat-icon>
+          </button>
+            <!-- <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>check_circle</mat-icon>
-            </button>
+            </button> -->
             <button type="button" mat-icon-button color="primary" (click)="openBottomSheet()">
                 <mat-icon>share</mat-icon>
             </button>
-            <button type="button" mat-icon-button color="primary" disabled>
+            <!-- <button type="button" mat-icon-button color="primary" (click)="openTestimoniesDialog()">
                 <mat-icon>report</mat-icon>
             </button>
             <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>forum</mat-icon>
-            </button>
+            </button> -->
         </div>
 
     </div>
