--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
@@ -51,13 +51,12 @@
   }
 
   .icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 10px;
-    margin-bottom: 5px;
-
+    display: inline-flex;
+    margin: 0px;
+    justify-content: center;
+    button{
+      margin: 0px 5px;
+    }
   }
-
 
 }
