--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -14,6 +14,12 @@
       margin-bottom: 10px;
     }
 
+    .dialog-body{
+      span{
+        font-size: 10pt;
+      }
+    }
+
     .icons {
       display: inline-flex;
       margin: 0px;
