--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
@@ -9,8 +9,8 @@
   </div>
   <div class="infocircle">
     <span><strong>{{ progressValue }}%</strong> De libres profesionistas en tu red</span>
-      <button type="button" mat-raised-button color="accent">
+      <!-- <button type="button" mat-raised-button color="accent" disabled> 
         Editar ocupación
-      </button>
+      </button>-->
       </div>
 </div>
