--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -70,7 +70,7 @@
 
             <mat-form-field appearance="outline">
                 <mat-label>Describe tu asociación</mat-label>
-                <textarea cdkTextareaAutosize
+                <textarea id="textarea-description" cdkTextareaAutosize
                  matInput formControlName="associationDescription"></textarea>
             </mat-form-field>
             <mat-form-field appearance="outline">
