--- a/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.html
+++ b/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.html
@@ -88,8 +88,8 @@
         </div>
 
         <div class="set-2">
-          <button type="button" mat-mini-fab color="primary" (click)="popAddSolutionDialog()">
-            <mat-icon>feedback</mat-icon>
+          <button type="button" mat-mini-fab color="warn" (click)="popAddSolutionDialog()">
+            <mat-icon>add_circle</mat-icon>
           </button>
         </div>
       </div>
