--- a/src/app/components/invite-dialog/invite-dialog.component.scss
+++ b/src/app/components/invite-dialog/invite-dialog.component.scss
@@ -24,4 +24,17 @@
       margin-left: 20px;
     }
   }
+
+  form {
+    margin-top: 20px;
+  }
+
+  .networks {
+    justify-content: center !important;
+
+    .icon {
+      width: 40px !important;
+      height: 40px !important;
+    }
+  }
 }
