--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
@@ -1,16 +1,16 @@
 <div class="set-12 list-head">
   <div class="set-8">
-    <!-- <input type="text" placeholder="Búscar tópicos..." (input)="applyFilter($event)"> -->
-    <mat-form-field appearance="outline">
+    <input type="text" placeholder="Búscar tópicos..." (input)="applyFilter($event)">
+    <!-- <mat-form-field appearance="outline">
       <mat-label>Búscar tópicos...</mat-label>
       <input matInput type="text" (keyup)="applyFilter($event)">
       <button matSuffix mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
   <div class="set-4 txt-right">
-    <button type="button" mat-mini-fab color="primary" (click)="filterTopicCoverage()">
+    <button type="button" mat-mini-fab color="warn" (click)="filterTopicCoverage()">
       <mat-icon>filter_list</mat-icon>
     </button>
     <button type="button" mat-mini-fab color="warn" (click)="popAddDocumentTopic()" [disabled]="!isCollaborator">
