--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
@@ -1,5 +1,5 @@
 <div class="circleChart">
-  <div class="circleprogress" style="position: relative">
+  <div class="set-6 circleprogress" >
     <mat-progress-spinner class="custom-spinner" [diameter]="150" [strokeWidth]="15" [value]="progressValue"
       color="accent">
       ></mat-progress-spinner>
@@ -7,7 +7,7 @@
       {{ progressValue }}%
     </span>
   </div>
-  <div class="infocircle">
+  <div class="set-5">
     <span><strong>{{ progressValue }}%</strong> De libres profesionistas en tu red</span>
       <!-- <button type="button" mat-raised-button color="accent" disabled> 
         Editar ocupación
