--- a/src/app/hub/app-configuration/app-configuration.component.scss
+++ b/src/app/hub/app-configuration/app-configuration.component.scss
@@ -1,50 +1,104 @@
 :host {
-  width: 100%;
   padding: 20px;
+  width: 100%;
+  height: auto;
 
-  .form-profile{
-    h3{
+  .form-profile {
+    h3 {
       margin-bottom: 10px;
     }
 
-    mat-checkbox{
+    .avatarhldr{
+      margin-bottom: 15px;
+      
+      .profile{
+      height: 100px;
+   
+      .avatar {
+        width: 75px;
+        height: 75px;
+        overflow: hidden;
+        border-radius: 100%;
+        position: absolute;
+        left: 20px;
+        // transform: translateX(-50%);
+        background: #ffffff;
+        top: 150px;
+        border: 3px solid #ffffff;
+    
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+          position: relative;
+          z-index: 4;
+        }
+    
+        span {
+          font-size: 20pt;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          background: #f1f1f1;
+        }
+    
+        .overlay {
+          width: 100%;
+          height: 100%;
+          background: rgba($color: #000000, $alpha: 0.7);
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 7;
+          opacity: 0;
+          transition: all .2s linear;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+    
+          mat-icon {
+            position: relative;
+            z-index: 4;
+            // color: #ffffff;
+            font-size: 30pt;
+          }
+        }
+    
+        .overlay:hover {
+          opacity: 1;
+        }
+      } }
+    }
+    mat-checkbox {
       margin-bottom: 10px;
     }
-  }
 
-  .avatar {
-    width: 64px;
-    height: 64px;
-    border-radius: 100%;
-    overflow: hidden;
-    border: 2px solid #ffffff;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    .associationSection {
+      margin-bottom: 20px;
+    }
 
-    span {
-      color: #ffffff;
-      font-size: 9pt;
+    #textarea-description::-webkit-scrollbar {
+      display: none;
+    }
+
+    .ctrls {
       display: flex;
-      align-items: center;
       justify-content: center;
-      height: 100%;
-      background: #1e7e7f;
+
+      button {
+        margin: 0px 5px;
+      }
     }
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      float: left;
-    }
-  }
-
-#textarea-description::-webkit-scrollbar {
-    display: none;
   }
 
 
-  .ctrls{
-    margin-top: 20px;
-  }
+
+    
+  
+
+
+
 }
