--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
@@ -4,19 +4,18 @@
 
 
   .circleChart {
-    display: inline-flex;
-    background: #ffffff;
-    
     div{
       margin: 10px 5px;
       button{
         margin-top: 20px;
       }
     }
+    .circleprogress{
+      position: relative
+    }
     .textProgressValue {
       font-weight: 700;
       color: #306eff;
-
       position: absolute;
       top: 50%;
       left: 50%;
