--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,9 +16,10 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        margin-bottom: 20px;
 
         mat-icon {
-          margin-right: 10px;
+          
           font-size: 13pt;
         }
       }
