add modal register association

--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -8,6 +8,9 @@
     mat-card {
       margin-bottom: 10px;
     }
+    mat-card:last-child{
+      margin-bottom: 0px;
+    }
 
     p {
       margin-top: 10px;
