--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -6,19 +6,19 @@
     <h3>Mi perfil</h3>
     <div class="avatarhldr">
         <div class="profile">
-        <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
-        <button type="button" class="avatar" (click)="fileInput.click()">
-            <img src="{{ user.avatarImage }}" alt="{{ user.firstname }} {{ user.lastname }}"
-                *ngIf="user.avatarImage != null" />
-            <span *ngIf="user.avatarImage == null">
-                {{ user.firstname | firstword | firstletter
-                }}{{ user.lastname | firstword | firstletter }}
-            </span>
-            <div class="overlay" matTooltip="Cargar imágen" matTooltipClass="tooltip">
-                <mat-icon color="accent">photo_camera</mat-icon>
-            </div>
-        </button>
-    </div>
+            <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
+            <button type="button" class="avatar" (click)="fileInput.click()">
+                <img src="{{ user.avatarImage }}" alt="{{ user.firstname }} {{ user.lastname }}"
+                    *ngIf="user.avatarImage != null" />
+                <span *ngIf="user.avatarImage == null">
+                    {{ user.firstname | firstword | firstletter
+                    }}{{ user.lastname | firstword | firstletter }}
+                </span>
+                <div class="overlay" matTooltip="Cargar imágen" matTooltipClass="tooltip">
+                    <mat-icon color="accent">photo_camera</mat-icon>
+                </div>
+            </button>
+        </div>
     </div>
     <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
         <div>
@@ -55,11 +55,49 @@
                 <mat-label>Télefono</mat-label>
                 <input type="text" matInput formControlName="phone">
             </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>¿Qué te hace feliz de México?</mat-label>
+                <mat-chip-list #happyChipList>
+                    <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
+                        {{item.name}}
+                        <button matChipRemove>
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </mat-chip>
+                    <input formControlName="interestsTopic" placeholder="" [matChipInputFor]="happyChipList"
+                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                        (matChipInputTokenEnd)="addHappyItem($event)">
+                    <button matSuffix><mat-icon>delete</mat-icon></button>
+                </mat-chip-list>
+                <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
+                    <strong>"Playas"</strong>
+                </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>¿Qué te entristece de México?</mat-label>
+                <mat-chip-list #unhappyChipList>
+                    <mat-chip *ngFor="let item of unhappyArray" (removed)="removeUnhappyItem(item)">
+                        {{item.name}}
+                        <button matChipRemove>
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </mat-chip>
+                    <input formControlName="uninterestsTopic" placeholder="" [matChipInputFor]="unhappyChipList"
+                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                        (matChipInputTokenEnd)="addUnhappyItem($event)">
+                    <button matSuffix><mat-icon>delete</mat-icon></button>
+                </mat-chip-list>
+                <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te entriztesca, ej:
+                    <strong>"Delincuencia"</strong>
+                </mat-hint>
+            </mat-form-field>
         </div>
 
 
-        <mat-checkbox (change)="showText = !showText">¿Perteneces a una asociación?</mat-checkbox>
-        <div class="associationSection" *ngIf="showText">
+        <mat-checkbox (change)="openDialogAssociationRegister()">¿Perteneces a una asociación?</mat-checkbox>
+        <!-- <div class="associationSection" *ngIf="showText">
             <h3 class="mt-1">Datos de la asociación</h3>
             <mat-form-field appearance="outline">
                 <mat-label>Tipo de asociación</mat-label>
@@ -89,7 +127,7 @@
                             <mat-icon>cancel</mat-icon>
                         </button>
                     </mat-chip>
-                    <input formControlName="interests" placeholder="..." [matChipInputFor]="happyChipList"
+                    <input formControlName="associationInterests" placeholder="..." [matChipInputFor]="happyChipList"
                         [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
                         (matChipInputTokenEnd)="addHappyItem($event)">
                 </mat-chip-list>
@@ -97,14 +135,14 @@
                     <strong>"Playas"</strong>
                 </mat-hint>
             </mat-form-field>
-        </div>
+        </div>-->
 
         <div class="ctrls">
             <button class="set-12" type="button" mat-raised-button color="warn">
                 <small>Cancelar</small>
             </button>
             <button class="set-12" type="submit" mat-raised-button color="primary" (click)="onUpdateUserData"
-                [disabled]="formGroup.invalid">Actualizar</button>
-        </div>
+               >Actualizar</button>
+        </div> 
     </form>
 </div>
