--- a/src/app/hub/app-configuration/app-configuration.component.scss
+++ b/src/app/hub/app-configuration/app-configuration.component.scss
@@ -4,7 +4,9 @@
   height: auto;
 
   .form-profile {
-
+    mat-form-field{
+      margin-bottom: 20px;
+    }
     .avatarhldr{
       margin-bottom: 15px;
       
@@ -69,7 +71,8 @@
       } }
     }
     mat-checkbox {
-      margin-bottom: 10px;
+      margin-top: 15px;
+      margin-bottom: 15px;
     }
 
     .associationSection {
