--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -1,4 +1,8 @@
-<div class="set-12">
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
+
+<div class="set-12"  *ngIf="isDataAvailable && isMobile">
   <mat-tab-group animationDuration="0ms">
     <mat-tab label="Temas">
       <search-input-mobile></search-input-mobile>
