change style card topic

--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -1,7 +1,7 @@
 <div class="set-12 topic-card">
     <mat-card *ngFor="let topic of topics">
-        <div class="dialog-body">
-            <span class="set-12 "><strong>{{topic.title}}</strong></span>
+        <div class="dialog-body"  (click)="openDialog(topic._id)">
+            <span class="set-12 "><strong>{{topic.title | slice:0:35}}<strong *ngIf="(topic.title).length > 35">...</strong></strong></span>
         </div>
         
         <div class="set-12 icons">
@@ -23,9 +23,9 @@
             <!-- <button type="button" mat-icon-button color="primary" disabled>
                 <mat-icon>report</mat-icon>
             </button> -->
-            <button type="button" mat-icon-button color="primary"  (click)="openDialog(topic._id)">
+            <!-- <button type="button" mat-icon-button color="primary"  (click)="openDialog(topic._id)">
                 <mat-icon>visibility</mat-icon>
-            </button>
+            </button> -->
         </div> 
     </mat-card>
 </div>
