--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -21,6 +21,9 @@
       span{
         font-size: 10pt;
       }
+      span:hover{
+        text-decoration: underline;
+      }
     }
 
     .icons {
